make sure establishment name is displayed in collapsed state

--- a/projects/project0masjid/client-app-v2/masjidma/src/components/Navigation/Navigation.css
+++ b/projects/project0masjid/client-app-v2/masjidma/src/components/Navigation/Navigation.css
@@ -7,8 +7,8 @@
 .establishment-name {
     flex: 1;
     text-align: center;
-    margin-left: 0rem !important;
-    margin-right: 0rem !important;
+    margin-left: 0.1rem !important;
+    margin-right: 0.1rem !important;
 }
   
 .establishment-dropdown button {
